# aether

./: .env.example  .gitattributes  .gitignore  ABOUT.md  CLAUDE.md  Makefile  PROBLEMS.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  rvhackahtin.tmp_home.html  rvhackahtin.tmp_root.html  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/src/: config.py  http_logging.py  logging_setup.py  main.py
apps/api/tests/: test_routes.py  test_session_store.py
apps/web/: next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  (+2 more)
docs/: APP_BLUEPRINT.md  ARCHITECTURE.md  DATA_MODEL.md  DEBUGGING.md  DECISION_LOG.md  DEFINITIVE_STACK.md  DEVICE_REALITY.md  ETHICS_AND_PRIVACY.md  EXPERIMENT_PLAN.md  FIRMWARE.md  KNOWLEDGE_BASE.md  PLAN_3D_RAW_CALIBRATION.md  PROTOCOL.md  RESEARCH_LEDGER.md  ROADMAP.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  UI_DESIGN.md  UI_SPEC.md  VITAL_SIGNS_REALITY.md
docs/archive/: PURGE_AUDIT.md  README.md  REFACTOR_COMPLETION.md  REPO_TRUTH_AUDIT.md  UI_AUDIT.md
docs/research/: open_questions.md
docs/runbooks/: calibration_for_vitals.md  manual_validation.md
firmware/esp32-s3-rx/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp32-s3-tx/: CMakeLists.txt  README.md  sdkconfig.defaults
scripts/: analyze_session.ps1  analyze_session.sh  dev.ps1  dev.sh  export_dataset.ps1  export_dataset.sh  flash_rx.ps1  flash_rx.sh  flash_tx.ps1  flash_tx.sh  hardware_check.ps1  hardware_check.sh  no_nonreal_data_check.mjs  probe_serial.py  record_session.ps1  record_session.sh  replay_session.ps1  replay_session.sh  setup_local.ps1  validate_accuracy.py
tests/e2e/: protocol-schema.test.mjs
(+75 files in other folders)
