[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether"
version = "0.1.0"
description = "Local-first Wi-Fi CSI sensing, visualization, and research platform."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "numpy>=2.0",
  "scipy>=1.14",
  "duckdb>=1.1",
  "polars>=1.8",
  "pyarrow>=17.0",
  "aiosqlite>=0.20",
  "pyserial>=3.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.setuptools]
packages = [
  "apps.api.src",
  "apps.api.src.api",
  "apps.api.src.health",
  "apps.api.src.services",
  "apps.api.src.ws",
  "aether_protocol",
  "services.collector.src",
  "services.dsp.src",
  "services.kb.src",
  "services.agent.src"
]

[tool.setuptools.package-dir]
"aether_protocol" = "packages/protocol/python/aether_protocol"
"apps.api.src" = "apps/api/src"
"apps.api.src.api" = "apps/api/src/api"
"apps.api.src.health" = "apps/api/src/health"
"apps.api.src.services" = "apps/api/src/services"
"apps.api.src.ws" = "apps/api/src/ws"
"services.collector.src" = "services/collector/src"
"services.dsp.src" = "services/dsp/src"
"services.kb.src" = "services/kb/src"
"services.agent.src" = "services/agent/src"

[tool.pytest.ini_options]
testpaths = [
  "apps/api/tests",
  "services/collector/tests",
  "services/dsp/tests",
  "services/kb/tests",
  "services/agent/tests",
  "tests"
]
pythonpath = [
  ".",
  "packages/protocol/python"
]

[tool.ruff]
line-length = 100
target-version = "py312"
